force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/noduplicates__Matching_Rule_Filter__c.object-meta.xml
<CustomObject>
    <label>Matching Rule Filter</label>
    <nameField>
        <displayFormat>MRF-{0000000}</displayFormat>
        <label>Matching Rule Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>