force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Is_Subset__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Is_Subset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subset</label>
    <type>Checkbox</type>
</CustomField>