force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Lookup_Name__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Lookup_Name__c</fullName>
    <label>Lookup Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>