force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Number__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Number__c</fullName>
    <label>Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>