force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Object__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Object__c</fullName>
    <label>Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>