force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Operator__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Operator__c</fullName>
    <label>Operator</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>