force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/fields/noduplicates__Value__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>