force-app/main/default/objects/noduplicates__Matching_Rule_Filter__c/listViews/noduplicates__All.listView-meta.xml
<ListView>
    <fullName>noduplicates__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>